# mercurio-core

./: .gitignore  Cargo.toml  README.md  repo-boundaries.json
crates/mercurio-ai/src/: lib.rs
crates/mercurio-cli/: Cargo.toml
crates/mercurio-cli/src/: main.rs
crates/mercurio-core/src/: assessment.rs  authoring.rs  constraints.rs  datalog.rs  diagrams.rs  element_view.rs  expression.rs  feasibility.rs  goal.rs  graph.rs  ir.rs  lib.rs  library.rs  mpack.rs  mutation.rs  outline.rs  paths.rs  performance.rs  plugin_registry.rs  project.rs  project_cache.rs  python_codegen.rs  query.rs  runtime.rs  semantic_target.rs  session.rs  views.rs
crates/mercurio-core/src/frontend/: resolver.rs  sysml.rs  transpile.rs
crates/mercurio-core/tests/: kerml_examples_corpus.rs
crates/mercurio-plugin-api/: Cargo.toml
crates/mercurio-plugin-api/src/: lib.rs
crates/mercurio-python/src/: lib.rs
crates/mercurio-reasoner-api/: Cargo.toml
crates/mercurio-reasoner-api/src/: lib.rs
crates/mercurio-reference-capabilities/: Cargo.toml
crates/mercurio-reference-capabilities/src/: lib.rs
crates/mercurio-server/src/: lib.rs  workspace.rs
crates/mercurio-server/src/api/: mod.rs
crates/mercurio-tools/: Cargo.toml
crates/mercurio-tools/corpus/: README.md  pilot_corpus.seed.json
crates/mercurio-tools/src/: lib.rs
crates/mercurio-wasm/: README.md
crates/mercurio-wasm/src/: lib.rs
docs/: CORE_REPO_LAYOUT.md  PEER_REPOSITORY_LAYOUT.md  REPO_BOUNDARY_AUDIT.md  SERVER_IMPLEMENTATION_PLAN.md  WINDOWS_INSTALLER_PLAN.md
docs/development/: COMPILE_PERFORMANCE_BENCHMARK.md  DATALOG_REASONING_ENGINE_PLAN.md  FRONTEND_TO_KIR_THEORY_OF_OPERATION.md  KERML_SUPPORT_PLAN.md  KIR_SPEC.md  L2_PARSER_PLAN.md  MAINTAINER_TOOLS.md  PROJECT_DESCRIPTOR_AND_MOUNT_PLAN.md  README.md  STDLIB_RELEASE_PIPELINE.md  VIEWS_ARCHITECTURE.md
docs/user/: CLI.md  KIR.md  KPAR.md  TROUBLESHOOTING.md
examples/src/examples/Camera Example/: new_model.sysml
examples/src/examples/Camera Example/diagrams/: new-diagram22.diagram.json
mappings/l2/: pilot_constructs.seed.json
python/: pyproject.toml
resources/: README.md  stdlib.rulepack.json
resources/language-profiles/sysml-2.0-pilot-0.57.0/: profile.json  provenance.json
resources/language-profiles/sysml-2.0-pilot-0.57.0/mappings/: README.md  kir_emission.seed.json  pilot_constructs.seed.json
resources/stdlib-sources/sysml-2.0-pilot-0.57.0/: release.lock.json  source.lock.json  stdlib.kir.json  stdlib.rulepack.json
test_files/: README.md
test_files/examples/: requirements_table_model.json  state_machine_model.json  state_machine_scenario.json  vehicle_model.json
test_files/examples/src/examples/.mercurio/: ai-objectives.json
test_files/examples/src/examples/Camera Example/: Camera.sysml  PictureTaking.sysml  new-diagram.diagram.json  requirements.sysml  test.py
test_files/examples/src/examples/Flashlight Example/: Flashlight Example.sysml
test_files/kerml/: minimal_classifier.kerml
test_files/l2/: expression_fixture.sysml  minimal_vehicle.sysml
tools/: build-release-package.ps1  install-mercurio.ps1
tools/pilot-exporter/src/main/java/dev/mercurio/pilot/: PilotModelExporter.java
