[workspace]
members = [
    "crates/mercurio-core",
    "crates/mercurio-cli",
    "crates/mercurio-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
zip = "0.6"
