[workspace]
members = [
    "crates/mercurio-core",
    "crates/mercurio-reasoner-api",
    "crates/mercurio-plugin-api",
    "crates/mercurio-reference-capabilities",
    "crates/mercurio-ai",
    "crates/mercurio-cli",
    "crates/mercurio-python",
    "crates/mercurio-tools",
    "crates/mercurio-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
pyo3 = "0.23"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
