[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mercurio"
version = "0.1.0"
description = "Python client for the Mercurio local HTTP backend."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Mercurio Contributors" }
]

[project.optional-dependencies]
test = []

[tool.setuptools]
packages = ["mercurio"]
