[package]
name = "mercurio-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "audit_pilot_corpus"
path = "src/bin/audit_pilot_corpus.rs"

[[bin]]
name = "compare_kerml_examples"
path = "src/bin/compare_kerml_examples.rs"

[[bin]]
name = "compare_pilot_ast"
path = "src/bin/compare_pilot_ast.rs"

[[bin]]
name = "compare_pilot_compile_errors"
path = "src/bin/compare_pilot_compile_errors.rs"

[[bin]]
name = "compare_pilot_semantics"
path = "src/bin/compare_pilot_semantics.rs"

[[bin]]
name = "check_repo_boundaries"
path = "src/bin/check_repo_boundaries.rs"

[[bin]]
name = "import_pilot_stdlib"
path = "src/bin/import_pilot_stdlib.rs"

[[bin]]
name = "inspect_connection"
path = "src/bin/inspect_connection.rs"

[[bin]]
name = "runtime_demo"
path = "src/bin/runtime_demo.rs"

[[bin]]
name = "generate_sample_views"
path = "src/bin/generate_sample_views.rs"

[[bin]]
name = "build_stdlib_release"
path = "src/bin/build_stdlib_release.rs"

[[bin]]
name = "audit_language_profile"
path = "src/bin/audit_language_profile.rs"

[dependencies]
mercurio-core = { path = "../mercurio-core" }
mercurio-views = { path = "../mercurio-views" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
zip.workspace = true
